fixed spacing issue

--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -5,7 +5,7 @@
   border: 2px solid #7e7e7e;
   border-radius: 20px;
   cursor: pointer;
-  left: 640px;
+  left: 580px;
 
   position: relative;
 }
